--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -26,7 +26,7 @@
   // Markers
   .markers {position:absolute;left:0;right:0;bottom:0;width:100%;text-align:center;padding:1rem;font-size:0;line-height:0;
     a {color:$theme-light-color;display:inline-block;padding:0.25rem;font-size:14px;line-height:1;
-      &:hover, &.active {color:$theme-dark-color;}
+      &:hover, &.active {color:$theme-dark-color;text-decoration:none;}
     }
   }
 }
