--- a/web/packages/sequence/themes/sequence/css/theme.less
+++ b/web/packages/sequence/themes/sequence/css/theme.less
@@ -19,7 +19,7 @@ html, body {font-size:@theme-font-type-font-size;}
   color:@theme-dark-color;
 }
 
-.anglified p::before {
+.anglified p::before, .anglified-redactor::before {
   color:@theme-highlight-color;
 }
 
