--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -3,7 +3,7 @@
 
 * {-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing: grayscale;}
 html, body {height:100%;font-size:$font-size-base;}
-html.no-scroll {overflow:hidden;}
+html.no-scroll {overflow:hidden; body {overflow:hidden;}}
 img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 
 // General
@@ -37,6 +37,12 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
     &:first-of-type {margin-top:0;}
   }
 
+  input{position:relative;
+    &::after {line-height:1;display:inline-block;position:absolute;top:0;right:0;font-size:12px;padding:4px 6px;background:rgba(0,0,0,0.65);color:#fff;}
+    &[type="text"]::after {content:'required';}
+    &[type="email"]::after {content:'valid email';}
+  }
+
   .statistic {text-align:center;
     b {font-size:420%;display:block;font-weight:100;line-height:1;letter-spacing:-1px;}
   }
@@ -61,7 +67,9 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
     .wrap-theme-dark {background:$theme-dark-color;}
   }
 
-  footer {font-size:14px;display:block;text-align:center;padding:1rem;background:#000;}
+  footer {font-size:14px;display:block;text-align:center;padding:1rem;background:#000;
+    [modalize]{display:block;}
+  }
 
   aside[scroll-top]{color:#fff;font-size:2rem;position:fixed;bottom:-100%;right:10px;display:inline-block;line-height:1;background:rgba(0,0,0,0.45);cursor:pointer;z-index:9;@include transition(bottom 0.25s ease);
     &:hover {background:rgba($theme-highlight-color,0.85);}
@@ -73,6 +81,12 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
   @import 'elements/masthead';
   @import 'elements/quote-cycle';
   @import 'elements/isotope';
+}
+
+// Disclaimer pop-up
+.legal-popups {padding:0 2rem;
+  h1,h2,h3 {font-size:1.3rem;}
+  .confirm-it {font-size:1.3rem;color:#fff;}
 }
 
 // Sidebar nav
@@ -93,6 +107,7 @@ html.sidebar-nav {
         &:nth-child(2){padding-left:(($grid-gutter-width/4)/2);}
       }
     }
+    footer [modalize]{display:inline;}
   }
 
   // Tricky navigation stuff: only make the "all visible" horizontal menu work
@@ -113,6 +128,7 @@ html.sidebar-nav {
           .inner {overflow:visible;}
           ul {height:100%;font-size:0;line-height:0;
             li {height:100%;display:inline-block;font-size:1rem;line-height:1;
+              &:first-of-type {display:none;} // Hide "Home" link
               a {display:table;width:100%;height:100%;border:0;
                 span {padding:0.25rem 1.4rem 0;display:table-cell;width:100%;height:100%;vertical-align:middle;text-align:center;}
               }
@@ -126,6 +142,10 @@ html.sidebar-nav {
 
 // > screen-md
 @media screen and (min-width:$screen-md){
+  .legal-popups {
+    h1,h2,h3 {font-size:1.7rem;}
+  }
+
   #c-level-1 {
     .iconified {margin-left:($grid-gutter-width / 4);padding-right:($grid-gutter-width / 4);}
   }
@@ -146,6 +166,13 @@ html.touch {
 .ccm-toolbar-visible {
   #c-level-1 {
     header {top:49px !important;}
+  }
+
+  &.edit-mode-mobile {
+    [data-viz-d]{display:none !important};
+    [data-viz-m]{display:block !important;position:relative;
+      &::before {line-height:1;content:'mobile content';display:inline-block;padding:5px 8px;font-size:12px;text-transform:uppercase;color:#b92c28;background:rgba(0,0,0,0.65);position:absolute;top:0;left:0;z-index:8;@include transform(rotate(270deg) translateY(-110%) translateX(-100%));@include transform-origin(0 0);}
+    };
   }
 }
 
