--- a/web/packages/sequence/css/src/elements/header_and_nav.scss
+++ b/web/packages/sequence/css/src/elements/header_and_nav.scss
@@ -4,11 +4,11 @@ header {text-transform:uppercase;z-index:4;
     img {padding:0;}
   }
   figure {padding:0 0.75rem;position:absolute;width:100%;margin:0;z-index:1;
-    a[href] {padding:0.75rem 0;display:block;max-width:180px;}
+    a {padding:0.75rem 0;display:block;max-width:180px;}
   }
   nav {position:fixed;top:0;bottom:0;left:100%;height:100%;width:$nav-sidebar-width;background:$theme-dark-color;z-index:4;
     &::after {visibility:hidden;opacity:0;position:fixed;content:'';display:block;top:0;bottom:0;min-height:100%;right:100%;width:1000%;background:rgba(0,0,0,0.8);z-index:-1;@include transform(translateZ(0));@include transition(all $mask-animate-time ease);}
-    .trigger {margin:0.5rem;display:inline-block;padding:1rem;position:absolute;top:0;right:100%;z-index:4;background:transparent url('#{$image-path}/nav_icon.svg') no-repeat 50% 50%;background-size:cover;}
+    .trigger {opacity:0.5;margin:0.5rem;display:inline-block;padding:1rem;position:absolute;top:0;right:100%;z-index:4;background:transparent url('#{$image-path}/nav_icon.svg') no-repeat 50% 50%;background-size:cover;}
     .inner {position:relative;width:100%;height:100%;@include scrollOverflow;}
     ul {list-style:none;padding:0;margin:0;
       li {
