--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -2,8 +2,8 @@
   .node {display:table;visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
     &:first-of-type {visibility:visible;opacity:1;}
   }
-  .inner {width:100%;height:100%;display:table-cell;vertical-align:middle;text-align:left;}
-  .node-content {font-size:1.3rem;display:inline-block;max-width:55%;padding-left:7rem;}
+  .inner {width:100%;height:100%;display:table-cell;vertical-align:top;text-align:left;padding-top:80px;}
+  .node-content {font-size:1.3rem;display:inline-block;max-width:90%;padding-left:2rem;}
   a {color:inherit;
     &:hover {text-decoration:underline;}
   }
@@ -14,7 +14,7 @@
   }
 
   // Navigation arrows
-  .arrows {color:$theme-light-color;position:absolute;top:50%;font-size:5rem;padding:0;line-height:1;@include transform(translateY(-100%));@include transition(all 0.25s ease);z-index:1;
+  .arrows {color:$theme-light-color;position:absolute;top:100%;font-size:4rem;padding:0;line-height:1;@include transform(translateY(-100%));@include transition(all 0.25s ease);z-index:1;
     &:hover {color:lighten($theme-light-color, 12%);text-decoration:none;}
     &[class*="left"]{left:0;
       &:hover {padding-left:0.25rem;}
@@ -31,15 +31,16 @@
   }
 }
 
-@media screen and (max-width:$screen-sm){
+@media screen and (min-width:$screen-sm){
   [masthead] {
-    .inner {text-align:center;}
-    .node-content {max-width:80%;padding:0 2rem;margin:0 auto;text-align:center;
-      p, ul {display:none;}
-      h1 {font-size:180% !important;
-        span {font-size:inherit !important;}
-      }
-    }
-    .arrows {font-size:4rem;top:100%;}
+    .inner {vertical-align:middle;padding-top:0;}
+    .node-content {padding-left:7rem;max-width:75%;}
+    .arrows {font-size:5rem;top:50%;}
+  }
+}
+
+@media screen and (min-width:$screen-md){
+  [masthead]{
+    .node-content {max-width:60%;}
   }
 }
