--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -2,7 +2,7 @@
   .node {display:table;visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
     &:first-of-type {visibility:visible;opacity:1;}
   }
-  .inner {width:100%;height:100%;display:table-cell;vertical-align:top;text-align:left;padding-top:80px;}
+  .inner {width:100%;height:100%;display:table-cell;vertical-align:bottom;text-align:left;padding-bottom:2rem;}
   .node-content {font-size:1.3rem;display:inline-block;max-width:90%;padding-left:2rem;}
   a {color:inherit;
     &:hover {text-decoration:underline;}
