--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -3,7 +3,7 @@
 
 * {-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing: grayscale;}
 html, body {height:100%;font-size:$font-size-base;}
-html.no-scroll {overflow:hidden; body {overflow:hidden;}}
+html.no-scroll {overflow:hidden; /*body {overflow:hidden;}*/}
 img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 
 // General
