--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -1,4 +1,4 @@
-[masthead]{width:100%;height:100%;position:relative;overflow:hidden;
+[masthead]{color:#fff;width:100%;height:100%;position:relative;overflow:hidden;
   .node {display:table;visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
     &:first-of-type {visibility:visible;opacity:1;}
   }
@@ -32,7 +32,7 @@
 }
 
 @media screen and (min-width:$screen-sm){
-  [masthead] {
+  [masthead] {color:$theme-font-color;
     .inner {vertical-align:middle;padding-top:0;}
     .node-content {padding-left:7rem;max-width:75%;}
     .arrows {font-size:5rem;top:50%;}
