--- a/web/packages/sequence/css/src/elements/isotope.scss
+++ b/web/packages/sequence/css/src/elements/isotope.scss
@@ -1,6 +1,6 @@
 [isotope]{margin-bottom:-$theme-section-spacing;}
 
-[isotope-filters]{margin-bottom:1rem;
+[isotope-filters]{margin-bottom:1rem;list-style:none;margin:0;padding:0;
   li {padding:0.5rem 0.75rem;
     a {color:#fff;display:block;padding:0.25rem 0.75rem;border:1px solid #fff;
       &.active {color:$theme-highlight-color;border-color:$theme-highlight-color;}
@@ -42,6 +42,9 @@ $node-ratio: 2/3;
 }
 
 @media screen and (min-width:$screen-sm){
+  [isotope-filters]{
+    li {display:inline-block;}
+  }
   [isotope-grid] .isotope-node{width:33.33%;padding-bottom:percentage(1/3 * $node-ratio);}
 }
 
