--- a/web/packages/sequence/themes/sequence/css/theme.less
+++ b/web/packages/sequence/themes/sequence/css/theme.less
@@ -76,15 +76,15 @@ body {
     }
 
     .wrap-theme-highlight {
-      background:@theme-highlight-color;
+      background-color:@theme-highlight-color;
     }
 
     .wrap-theme-light {
-      background:@theme-light-color;
+      background-color:@theme-light-color;
     }
 
     .wrap-theme-dark {
-      background:@theme-dark-color;
+      background-color:@theme-dark-color;
     }
   }
 
