--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -56,15 +56,19 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
   Page Sections!
   @todo: themable first-of-type and last-of-type sections
   **********************************************************************/
-  section {padding:$theme-section-spacing 0;overflow:hidden;
+  section {padding:$theme-section-spacing 0;overflow:hidden;position:relative;
     &:first-of-type {padding:0;height:100%;width:100%;position:relative;background:$theme-dark-color;}
     &:last-of-type {padding-top:$theme-section-spacing/2;}
     h2 {text-align:center;margin:0;padding:2rem 1rem 3rem;text-transform:uppercase;}
     [class*="wrap-"]{margin:-$theme-section-spacing 0;padding:$theme-section-spacing 0;background-size:cover;background-position:50% 100%;background-attachment:fixed;}
     .wrap-custom {/* un-styled; either parallax or custom color */}
-    .wrap-theme-highlight {color:#000;background:$theme-highlight-color;}
-    .wrap-theme-light {background:$theme-light-color;}
-    .wrap-theme-dark {background:$theme-dark-color;}
+    .wrap-theme-highlight {color:#000;background-color:$theme-highlight-color;}
+    .wrap-theme-light {background-color:$theme-light-color;}
+    .wrap-theme-dark {background-color:$theme-dark-color;}
+    .section-footer {position:absolute;bottom:0;right:0;padding:1rem;
+      &:empty {display:none;}
+      img, img.responsive {padding:0;}
+    }
   }
 
   footer {font-size:14px;display:block;text-align:center;padding:1rem;background:#000;
@@ -100,7 +104,7 @@ html.sidebar-nav {
 // > screen-sm
 @media screen and (min-width:$screen-sm){
   #c-level-1 {
-    section:last-of-type {height:95%;width:100%;background:$theme-dark-color;}
+    section:last-of-type {height:95%;width:100%;background-color:$theme-dark-color;}
     form {
       .col-sm-6 {
         &:nth-child(1){padding-right:(($grid-gutter-width/4)/2);}
