--- a/web/packages/sequence/css/app.css
+++ b/web/packages/sequence/css/app.css
@@ -120,6 +120,12 @@
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, #000000 35%);
         background-repeat: repeat-x;
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33000000', endColorstr='#FF000000', GradientType=0); } }
+[modal-window].portfolio {
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  width: 100%; }
+
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
