--- a/web/packages/sequence/css/app.css
+++ b/web/packages/sequence/css/app.css
@@ -124,7 +124,8 @@
   max-width: 100%;
   max-height: 100%;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  background: #222222; }
 
 * {
   -webkit-font-smoothing: antialiased;
