--- a/web/packages/sequence/css/src/elements/modal-window.scss
+++ b/web/packages/sequence/css/src/elements/modal-window.scss
@@ -44,6 +44,6 @@
 }
 
 // Portfolio
-[modal-window].portfolio {max-width:100%;max-height:100%;height:100%;width:100%;
+[modal-window].portfolio {max-width:100%;max-height:100%;height:100%;width:100%;background:$theme-dark-color;
 
 }
