--- a/web/packages/sequence/css/app.css
+++ b/web/packages/sequence/css/app.css
@@ -601,36 +601,22 @@ img {
     #c-level-1 [isotope-grid] .isotope-node {
       color: #000;
       position: relative;
-      height: 0; }
-      #c-level-1 [isotope-grid] .isotope-node .isotope-box,
-      #c-level-1 [isotope-grid] .isotope-node .isotope-box::before {
-        padding: 3px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background-size: cover;
-        background-position: 50% 50%;
-        background-clip: content-box;
-        overflow: hidden; }
+      /*height:0;*/
+      padding: 3px;
+      background-size: cover;
+      background-position: 50% 50%;
+      background-clip: border-box;
+      background-clip: border-box;
+      border: 4px solid black;
+      overflow: hidden; }
       #c-level-1 [isotope-grid] .isotope-node .isotope-box {
         width: 100%;
-        height: 100%; }
-        #c-level-1 [isotope-grid] .isotope-node .isotope-box::before {
-          content: '';
-          visibility: hidden;
-          opacity: 0;
-          display: block;
-          background-color: rgba(245, 130, 32, 0.85);
-          min-width: 100%;
-          min-height: 100%;
-          -webkit-transition: all 0.25s ease;
-          -o-transition: all 0.25s ease;
-          transition: all 0.25s ease; }
+        height: 100%;
+        position: absolute;
+        display: none;
+        background-color: rgba(245, 130, 32, 0.85); }
         #c-level-1 [isotope-grid] .isotope-node .isotope-box .isotope-content {
-          visibility: hidden;
-          opacity: 0;
+          color: white;
           position: absolute;
           bottom: 15%;
           left: 3px;
@@ -646,13 +632,6 @@ img {
           #c-level-1 [isotope-grid] .isotope-node .isotope-box .isotope-content p {
             margin-bottom: 0;
             font-size: 90%; }
-      #c-level-1 [isotope-grid] .isotope-node:hover .isotope-box::before, #c-level-1 [isotope-grid] .isotope-node.active .isotope-box::before {
-        visibility: visible;
-        opacity: 1; }
-      #c-level-1 [isotope-grid] .isotope-node:hover .isotope-content, #c-level-1 [isotope-grid] .isotope-node.active .isotope-content {
-        visibility: visible;
-        opacity: 1;
-        bottom: 3px; }
   #c-level-1 [isotope-grid] .isotope-node {
     width: 100%;
     padding-bottom: 66.66667%; }
