--- a/web/packages/sequence/css/src/elements/isotope.scss
+++ b/web/packages/sequence/css/src/elements/isotope.scss
@@ -14,7 +14,7 @@
 $node-spacing: 3px;
 .grid-wrapper {padding:0 $node-spacing;}
 [isotope-grid]{position:relative;width:100%;
-  .isotope-node {color:#000;position: relative;/*height:0;*/padding:$node-spacing;background-size:cover;background-position:50% 50%;background-clip:border-box;background-clip: border-box;border: 4px solid black;overflow: hidden;
+  .isotope-node {color:#000;position: relative;/*height:0;*/padding:$node-spacing;background-size:cover;background-position:50% 50%;background-clip:border-box;background-clip: border-box;border: $node-spacing solid black;overflow: hidden;
     .isotope-box {width:100%;height:100%;position:absolute;display: none;background-color:rgba($theme-highlight-color,0.85);
       .isotope-content {color:white;position:absolute;bottom:15%;left:$node-spacing;right:$node-spacing;padding:1rem;@include transition(all 0.25s ease);
         h5 {text-transform:uppercase;font-size:130%;margin:0;}
@@ -25,7 +25,6 @@ $node-spacing: 3px;
 }
 
 $node-ratio: 2/3;
-
 [isotope-grid] .isotope-node{width:100%;padding-bottom:percentage(1/1 * $node-ratio);}
 
 @media screen and (min-width:$screen-xs){
