--- a/web/packages/sequence/fonts/icomoon/style.css
+++ b/web/packages/sequence/fonts/icomoon/style.css
@@ -1,15 +1,15 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-4xwedh');
-	src:url('fonts/icomoon.eot?#iefix-4xwedh') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-4xwedh') format('woff'),
-		url('fonts/icomoon.ttf?-4xwedh') format('truetype'),
-		url('fonts/icomoon.svg?-4xwedh#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-qmahge');
+	src:url('fonts/icomoon.eot?#iefix-qmahge') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-qmahge') format('woff'),
+		url('fonts/icomoon.ttf?-qmahge') format('truetype'),
+		url('fonts/icomoon.svg?-qmahge#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
-[class^="icn-"], [class*=" icn-"] {
+[class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
 	speak: none;
 	font-style: normal;
@@ -17,125 +17,133 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-	
-	/* Enable Ligatures ================ */
-	-webkit-font-feature-settings: "liga";
-	-moz-font-feature-settings: "liga=1";
-	-moz-font-feature-settings: "liga";
-	-ms-font-feature-settings: "liga" 1;
-	-o-font-feature-settings: "liga";
-	font-feature-settings: "liga";
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icn-layers:before {
-	content: "\e031";
+.icon-office:before {
+	content: "\e600";
 }
 
-.icn-adjust:before {
-	content: "\f042";
-}
-
-.icn-plus2:before {
-	content: "\f067";
-}
-
-.icn-minus:before {
-	content: "\f068";
-}
-
-.icn-bars:before {
-	content: "\f0c9";
-}
-
-.icn-circle-o:before {
-	content: "\f10c";
-}
-
-.icn-circle:before {
-	content: "\f111";
-}
-
-.icn-bullseye:before {
-	content: "\f140";
-}
-
-.icn-close:before {
+.icon-close:before {
 	content: "\e680";
 }
 
-.icn-close-circle:before {
+.icon-close-circle:before {
 	content: "\e681";
 }
 
-.icn-angle-up:before {
+.icon-angle-up:before {
 	content: "\e682";
 }
 
-.icn-angle-up-circle:before {
+.icon-angle-up-circle:before {
 	content: "\e683";
 }
 
-.icn-angle-right:before {
+.icon-angle-right:before {
 	content: "\e684";
 }
 
-.icn-angle-right-circle:before {
+.icon-angle-right-circle:before {
 	content: "\e685";
 }
 
-.icn-angle-left:before {
+.icon-angle-left:before {
 	content: "\e686";
 }
 
-.icn-angle-left-circle:before {
+.icon-angle-left-circle:before {
 	content: "\e687";
 }
 
-.icn-angle-down:before {
+.icon-angle-down:before {
 	content: "\e688";
 }
 
-.icn-angle-down-circle:before {
+.icon-angle-down-circle:before {
 	content: "\e689";
 }
 
-.icn-plus:before {
+.icon-plus:before {
 	content: "\e623";
 }
 
-.icn-less:before {
+.icon-less:before {
 	content: "\e644";
 }
 
-.icn-info:before {
+.icon-info:before {
 	content: "\e647";
 }
 
-.icn-help1:before {
+.icon-help1:before {
 	content: "\e64a";
 }
 
-.icn-expand1:before {
+.icon-expand1:before {
 	content: "\e657";
 }
 
-.icn-check:before {
+.icon-check:before {
 	content: "\e66c";
 }
 
-.icn-attention:before {
+.icon-attention:before {
 	content: "\e67b";
 }
 
-.icn-google-plus:before {
+.icon-google-plus:before {
 	content: "\ea88";
 }
 
-.icn-twitter:before {
+.icon-twitter:before {
 	content: "\ea91";
+}
+
+.icon-file-text:before {
+	content: "\e922";
+}
+
+.icon-layers:before {
+	content: "\e031";
+}
+
+.icon-cabinet:before {
+	content: "\e601";
+}
+
+.icon-tools:before {
+	content: "\e602";
+}
+
+.icon-adjust:before {
+	content: "\f042";
+}
+
+.icon-plus2:before {
+	content: "\f067";
+}
+
+.icon-minus:before {
+	content: "\f068";
+}
+
+.icon-bars:before {
+	content: "\f0c9";
+}
+
+.icon-circle-o:before {
+	content: "\f10c";
+}
+
+.icon-circle:before {
+	content: "\f111";
+}
+
+.icon-bullseye:before {
+	content: "\f140";
 }
 
