--- a/web/packages/sequence/css/app.css
+++ b/web/packages/sequence/css/app.css
@@ -23,6 +23,7 @@
   transition: all 0.35s ease; }
   [modal-window] img {
     max-height: 350px;
+    max-width: 80%;
     display: block;
     margin: 0 auto; }
   [modal-window] h2 {
@@ -53,7 +54,7 @@
 .modal-nav {
   display: inline-block;
   color: #fff;
-  font-size: 4rem;
+  font-size: 3rem;
   position: absolute;
   top: 50%;
   line-height: 1;
@@ -78,9 +79,13 @@
       padding-right: 15px; }
     [modal-window] img {
       max-height: none;
+      max-width: 100%;
       margin: 0; }
     [modal-window] h3 {
-      text-align: left; } }
+      text-align: left; }
+
+  .modal-nav {
+    font-size: 4rem; } }
 @media screen and (min-width: 992px) {
   [modal-window] {
     padding: 45px;
@@ -214,22 +219,30 @@ img {
     /*text-decoration:none;*/ }
   #c-level-1 h3:first-of-type, #c-level-1 h4:first-of-type, #c-level-1 h5:first-of-type {
     margin-top: 0; }
-  #c-level-1 input {
+  #c-level-1 form .confirm-msg p {
+    background: #f58220;
+    color: #222222;
+    padding: 0.5rem 1rem; }
+  #c-level-1 form .show-errors {
+    background: #f58220;
+    color: #222222;
+    list-style: none;
+    padding: 0.5rem 1rem; }
+  #c-level-1 form span.show-required {
+    display: block;
     position: relative; }
-    #c-level-1 input::after {
+    #c-level-1 form span.show-required::after {
+      content: 'required';
       line-height: 1;
       display: inline-block;
       position: absolute;
       top: 0;
       right: 0;
-      font-size: 12px;
+      font-size: 11px;
       padding: 4px 6px;
-      background: rgba(0, 0, 0, 0.65);
-      color: #fff; }
-    #c-level-1 input[type="text"]::after {
-      content: 'required'; }
-    #c-level-1 input[type="email"]::after {
-      content: 'valid email'; }
+      background: #000;
+      color: #fff;
+      opacity: 0.35; }
   #c-level-1 .statistic {
     text-align: center; }
     #c-level-1 .statistic b {
@@ -466,7 +479,6 @@ img {
         width: 100%;
         height: 100%;
         position: absolute;
-        display: none;
         background-color: rgba(245, 130, 32, 0.85); }
         #c-level-1 [isotope-grid] .isotope-node .isotope-box .isotope-content {
           position: absolute;
@@ -693,6 +705,9 @@ html.sidebar-nav #c-level-1 nav::after {
     padding-bottom: 2rem; }
 
   [class*="col-sm-"] .iconified:last-of-type {
+    padding-bottom: 0; }
+
+  form .col-sm-4, form .col-sm-6 {
     padding-bottom: 0; } }
 @media screen and (min-width: 768px) {
   #c-level-1 section:last-of-type {
