--- a/web/packages/sequence/css/src/elements/isotope.scss
+++ b/web/packages/sequence/css/src/elements/isotope.scss
@@ -15,7 +15,7 @@ $node-spacing: 3px;
 .grid-wrapper {padding:0 $node-spacing;}
 [isotope-grid]{position:relative;width:100%;
   .isotope-node {color:#000;position: relative;/*height:0;*/padding:$node-spacing;background-size:cover;background-position:50% 50%;background-clip:border-box;background-clip: border-box;border: $node-spacing solid black;overflow: hidden;
-    .isotope-box {width:100%;height:100%;position:absolute;display: none;background-color:rgba($theme-highlight-color,0.85);
+    .isotope-box {width:100%;height:100%;position:absolute;background-color:rgba($theme-highlight-color,0.85);
       .isotope-content {position:absolute;bottom:0;left:$node-spacing;right:$node-spacing;padding:1rem;@include transition(all 0.25s ease);
         h5 {text-transform:uppercase;font-size:130%;margin:0;}
         p {margin-bottom:0;font-size:90%;}
