--- a/web/packages/sequence/css/src/elements/modal-window.scss
+++ b/web/packages/sequence/css/src/elements/modal-window.scss
@@ -1,5 +1,5 @@
 [modal-window]{padding:2rem 0;width:100%;height:100%;visibility:hidden;opacity:0;display:block;position:fixed;top:50%;left:50%;background:rgba(0,0,0,0.85);z-index:-1;@include scrollOverflow;@include transform(translate(-50%, 0));@include transition(all 0.35s ease);
-  img {max-height:350px;display:block;margin:0 auto;}
+  img {max-height:350px;max-width:80%;display:block;margin:0 auto;}
   h2 {margin-top:0;}
   h3 {margin-top:0;text-align:center;}
   &.open {visibility:visible;opacity:1;z-index:9;@include transform(translate(-50%,-50%));}
@@ -8,7 +8,7 @@
   }
 }
 
-.modal-nav {display:inline-block;color:#fff;font-size:4rem;position:absolute;top:50%;line-height:1;cursor:pointer;@include transform(translateY(-50%));
+.modal-nav {display:inline-block;color:#fff;font-size:3rem;position:absolute;top:50%;line-height:1;cursor:pointer;@include transform(translateY(-50%));
   &:hover {color:$theme-highlight-color;text-decoration:none;}
   &.prev {left:0;}
   &.next {right:0;}
@@ -17,9 +17,10 @@
 @media screen and (min-width:$screen-sm){
   [modal-window] {padding:($theme-section-spacing / 2) ($theme-section-spacing / 4);//width:100%;max-width:80%;max-height:80%;
     [class*="col-"]{padding-left:15px;padding-right:15px;}
-    img {max-height:none;margin:0;}
+    img {max-height:none;max-width:100%;margin:0;}
     h3 {text-align:left;}
   }
+  .modal-nav {font-size:4rem;}
 }
 
 @media screen and (min-width:$screen-md){
